@@ -1,6 +1,6 @@
 {
     "name": "TheArcFurnaceImp",
-    "version": "1.0.7",
+    "version": "1.0.8",
     "title": "Arc Furnace (Improved)",
     "author": "SingularityCat",
     "homepage": "https://github.com/SingularityCat/factorio-arc-furnace",
